changed astropy time to python datetime. include goes number and goes letter columns

--- a/jupyter_notebooks/create_hek_flare_database.ipynb
+++ b/jupyter_notebooks/create_hek_flare_database.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +11,10 @@
     "sys.path.insert(2, '../modules/')\n",
     "\n",
     "import pickle\n",
-    "import os\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
+    "import os\n",
     "from sunpy.time import TimeRange\n",
     "import sunpy.instr.goes\n",
     "import time\n",
@@ -20,15 +22,13 @@
     "from sunpy.net import hek\n",
     "from sunpy.time import parse_time\n",
     "\n",
-    "from sunpy.net import hek\n",
-    "from sunpy.time import parse_time\n",
-    "import numpy as np\n",
     "from ruffus import *\n",
     "import re\n",
     "import datetime\n",
     "from datetime import timedelta\n",
     "\n",
-    "import dataconfig"
+    "import dataconfig\n",
+    "import convert_datetime"
    ]
   },
   {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        " 'end': Timestamp('2010-05-31 00:00:00', freq='M')}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,35 +95,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(None,\n",
-       " 'flare_hekQ.working/2010_4_flare_hek.start.pickle',\n",
-       " Timestamp('2010-05-01 00:00:00', freq='M'),\n",
-       " Timestamp('2010-05-31 00:00:00', freq='M'))"
+       "{'name': '2010_4_flare_hek',\n",
+       " 'start': Timestamp('2010-05-01 00:00:00', freq='M'),\n",
+       " 'end': Timestamp('2010-05-31 00:00:00', freq='M')}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "first_call = create_initial_files()\n",
-    "first_call"
+    "start_file = time_array[0]\n",
+    "start_file\n",
+    "# file\n",
+    "# name = file['name']\n",
+    "# start = file['start']\n",
+    "# end = file['end']\n",
+    "# outfile = tw('{}.start.pickle'.format(name))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_request(infile, outfile, start, end):\n",
+    "# def create_request(infile, outfile, start, end):\n",
     "\n",
     "\n",
     "\t# pickle.dump({'start': start, 'end': end, 'event_type': 'FL'}, open(outfile, 'wb'))\n",
@@ -132,149 +136,339 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2010-05-01 00:00:00 2010-05-31 00:00:00\n"
+     ]
+    }
+   ],
    "source": [
     "# @transform(create_request, suffix('.start.pickle'), \"_flares_hek_result.pickle\")\n",
-    "def download_data(infile, outfile):\n",
-    "\t\n",
-    "\tstart_file = pickle.load(open(infile, 'rb'))\n",
+    "# def download_data(infile, outfile):\n",
     "\n",
-    "\tclient = hek.HEKClient()\n",
+    "# start_file =// pickle.load(open(infile, 'rb'))\n",
     "\n",
-    "\tevent_type = start_file['event_type']\n",
     "\n",
-    "\ttstart = start_file['start']\n",
+    "client = hek.HEKClient()\n",
     "\n",
-    "\ttend = start_file['end']\n",
+    "event_type = 'FL'\n",
     "\n",
-    "\t# print('started {}'.format(tstart))\n",
+    "tstart = start_file['start']\n",
     "\n",
-    "\t# time_range = TimeRange(t_start, t_end)\n",
+    "tend = start_file['end']\n",
     "\n",
-    "\t# tstart = time_range.start\n",
-    "\t# tend = time_range.end\n",
+    "print(tstart, tend)\n",
     "\n",
-    "\tAR_results = client.search(hek.attrs.Time(tstart, tend),\n",
-    "\t                           hek.attrs.EventType(event_type))\n",
+    "# print('started {}'.format(tstart))\n",
     "\n",
-    "\tpickle.dump(AR_results, open(outfile, 'wb'))"
+    "# time_range = TimeRange(t_start, t_end)\n",
+    "\n",
+    "# tstart = time_range.start\n",
+    "# tend = time_range.end\n",
+    "\n",
+    "AR_results = client.search(hek.attrs.Time(tstart, tend),\n",
+    "\t\t\t\t\t\t\thek.attrs.EventType(event_type))\n",
+    "result = AR_results.to_pandas()\n",
+    "# pickle.dump(AR_results, open(outfile, 'wb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gs_thumburl\n",
+      "comment_count\n",
+      "hpc_bbox\n",
+      "frm_humanflag\n",
+      "hgc_coord\n",
+      "event_coordsys\n",
+      "obs_levelnum\n",
+      "hpc_coord\n",
+      "event_npixels\n",
+      "gs_imageurl\n",
+      "ar_polarity\n",
+      "frm_paramset\n",
+      "hrc_coord\n",
+      "event_starttime\n",
+      "ar_mtwilsoncls\n",
+      "event_type\n",
+      "intensmin\n",
+      "fl_fluence\n",
+      "obs_meanwavel\n",
+      "frm_url\n",
+      "skel_chaincode\n",
+      "bound_chaincode\n",
+      "noposition\n",
+      "fl_fluenceunit\n",
+      "active\n",
+      "intensmax\n",
+      "frm_versionnumber\n",
+      "fl_peaktempunit\n",
+      "fl_halphaclass\n",
+      "area_uncert\n",
+      "obs_dataprepurl\n",
+      "hpc_geom\n",
+      "hgc_bbox\n",
+      "intensmedian\n",
+      "chaincodetype\n",
+      "obs_channelid\n",
+      "event_clippedspatial\n",
+      "ar_noaaclass\n",
+      "SOL_standard\n",
+      "event_avg_rating\n",
+      "eventtype\n",
+      "intensunit\n",
+      "hpc_boundcc\n",
+      "event_mapurl\n",
+      "frm_contact\n",
+      "ar_penumbracls\n",
+      "intensmean\n",
+      "bound_ccstartc1\n",
+      "frm_name\n",
+      "area_atdiskcenter\n",
+      "frm_identifier\n",
+      "obs_observatory\n",
+      "event_description\n",
+      "boundbox_c2ur\n",
+      "obs_firstprocessingdate\n",
+      "boundbox_c2ll\n",
+      "frm_institute\n",
+      "hrc_bbox\n",
+      "refs_orig\n",
+      "ar_mcintoshcls\n",
+      "event_maskurl\n",
+      "bound_ccstartc2\n",
+      "gs_movieurl\n",
+      "event_score\n",
+      "skel_startc2\n",
+      "skel_startc1\n",
+      "fl_efoldtime\n",
+      "event_expires\n",
+      "fl_efoldtimeunit\n",
+      "hrc_boundcc\n",
+      "event_probability\n",
+      "intensvar\n",
+      "frm_daterun\n",
+      "event_coordunit\n",
+      "hpc_y\n",
+      "hpc_x\n",
+      "search_instrument\n",
+      "ar_numspots\n",
+      "kb_archivdate\n",
+      "kb_archivist\n",
+      "intenstotal\n",
+      "sum_overlap_scores\n",
+      "hgs_boundcc\n",
+      "intensskew\n",
+      "obs_includesnrt\n",
+      "rasterscan\n",
+      "obs_wavelunit\n",
+      "kb_archivid\n",
+      "search_frm_name\n",
+      "boundbox_c1ur\n",
+      "ar_noaanum\n",
+      "area_atdiskcenteruncert\n",
+      "boundbox_c1ll\n",
+      "event_importance_num_ratings\n",
+      "ar_compactnesscls\n",
+      "skel_curvature\n",
+      "event_testflag\n",
+      "event_c2error\n",
+      "hrc_r\n",
+      "skel_nsteps\n",
+      "hgs_y\n",
+      "obs_title\n",
+      "fl_peakemunit\n",
+      "hgs_x\n",
+      "hcr_checked\n",
+      "frm_specificid\n",
+      "event_title\n",
+      "obs_instrument\n",
+      "event_c1error\n",
+      "revision\n",
+      "hpc_radius\n",
+      "event_endtime\n",
+      "event_importance\n",
+      "event_coord2\n",
+      "event_coord3\n",
+      "event_coord1\n",
+      "search_observatory\n",
+      "area_raw\n",
+      "concept\n",
+      "solar_object_locator\n",
+      "event_pixelunit\n",
+      "hgc_boundcc\n",
+      "fl_peakflux\n",
+      "hgc_x\n",
+      "hrc_a\n",
+      "event_peaktime\n",
+      "hgc_y\n",
+      "gs_galleryid\n",
+      "fl_goescls\n",
+      "hgs_coord\n",
+      "ar_zurichcls\n",
+      "bound_ccnsteps\n",
+      "intenskurt\n",
+      "event_clippedtemporal\n",
+      "fl_peakfluxunit\n",
+      "fl_peakem\n",
+      "rasterscantype\n",
+      "search_channelid\n",
+      "fl_peaktemp\n",
+      "hgs_bbox\n",
+      "area_unit\n",
+      "obs_lastprocessingdate\n",
+      "refs\n"
+     ]
+    }
+   ],
+   "source": [
+    "for column in result.columns:\n",
+    "    print(column)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# def parse_HEK_FL_result(infile, outfile):\n",
+    "\n",
+    "\t# want to condense the results of the query into a more manageable\n",
+    "\t# dictionary\n",
+    "\t# keep event data, start time, peak time, end time, GOES-class,\n",
+    "\t# location, active region source (as per GOES list standard)\n",
+    "\t# make this into a list of dictionaries\n",
+    "\n",
+    "goes_results = AR_results\n",
+    "\n",
+    "goes_event_list = []\n",
+    "\n",
+    "for r in goes_results:\n",
+    "\ttry:\n",
+    "\t\thgc_poly_string = r['hgc_bbox']\n",
+    "\t\tsep_coord_from_string_hgc = re.split('[(-)]+', hgc_poly_string)\n",
+    "\t\tsep_coord_from_string_hgc = re.split('[(-)]+', hgc_poly_string)\n",
+    "\t\tonly_coord_string_list_hgc = sep_coord_from_string_hgc[1].split(',')\n",
+    "\t\tthis_coord_array_hgc = []\n",
+    "\t\tfor coord_pair_string_hgc in only_coord_string_list_hgc:\n",
+    "\t\t\tnumerical_coord_pairs_hgc = [np.float(coord_pair_string_hgc.split(' ')[0]), np.float(coord_pair_string_hgc.split(' ')[1])]\n",
+    "\t\t\tthis_coord_array_hgc.append(numerical_coord_pairs_hgc)\n",
+    "\texcept:\n",
+    "\t\tthis_coord_array_hgc = [0]\n",
+    "\n",
+    "\ttry:\n",
+    "\t\thpc_poly_string = r['hpc_bbox']\n",
+    "\t\tsep_coord_from_string_hpc = re.split('[(-)]+', hpc_poly_string)\n",
+    "\t\tsep_coord_from_string_hpc = re.split('[(-)]+', hpc_poly_string)\n",
+    "\t\tonly_coord_string_list_hpc = sep_coord_from_string_hpc[1].split(',')\n",
+    "\t\tthis_coord_array_hpc = []\n",
+    "\t\tfor coord_pair_string_hpc in only_coord_string_list_hpc:\n",
+    "\t\t\tnumerical_coord_pairs_hpc = [np.float(coord_pair_string_hpc.split(' ')[0]), np.float(coord_pair_string_hpc.split(' ')[1])]\n",
+    "\t\t\tthis_coord_array_hpc.append(numerical_coord_pairs_hpc)\n",
+    "\texcept:\n",
+    "\t\tthis_coord_array_hpc = [0]\n",
+    "\n",
+    "\n",
+    "\ttry:\n",
+    "\t\thgs_poly_string = r['hgs_bbox']\n",
+    "\t\tsep_coord_from_string_hgs = re.split('[(-)]+', hgs_poly_string)\n",
+    "\t\tsep_coord_from_string_hgs = re.split('[(-)]+', hgs_poly_string)\n",
+    "\t\tonly_coord_string_list_hgs = sep_coord_from_string_hgs[1].split(',')\n",
+    "\t\tthis_coord_array_hgs = []\n",
+    "\t\tfor coord_pair_string_hgs in only_coord_string_list_hgs:\n",
+    "\t\t\tnumerical_coord_pairs_hgs = [np.float(coord_pair_string_hgs.split(' ')[0]), np.float(coord_pair_string_hgs.split(' ')[1])]\n",
+    "\t\t\tthis_coord_array_hgs.append(numerical_coord_pairs_hgs)\n",
+    "\texcept:\n",
+    "\t\tthis_coord_array_hgs = [0]\n",
+    "\t\t\n",
+    "\tif r['noposition'] == 'true':\n",
+    "\t\tflare_loc_bool = 1\n",
+    "\telse:\n",
+    "\t\tflare_loc_bool = 0\n",
+    "\n",
+    "\tgoes_class = str(r['fl_goescls'])\n",
+    "\n",
+    "\ttry:\n",
+    "\t\t# will fail if not a number\n",
+    "\t\tgoes_number = np.float(goes_class[1:])\n",
+    "\texcept:\n",
+    "\t\tgoes_number = np.nan\n",
+    "\n",
+    "\tgoes_event = {\n",
+    "\t\t'event_date': parse_time(r['event_starttime']).strftime(\n",
+    "\t\t\t'%Y-%m-%d'),\n",
+    "\t\t'start_time': convert_datetime.astropytime_to_pythondatetime(parse_time(r['event_starttime'])),\n",
+    "\t\t'peak_time': convert_datetime.astropytime_to_pythondatetime(parse_time(r['event_peaktime'])),\n",
+    "\t\t'end_time': convert_datetime.astropytime_to_pythondatetime(parse_time(r['event_endtime'])),\n",
+    "\t\t'goes_class': goes_class,\n",
+    "\t\t'goes_letter': goes_class[:1],\n",
+    "\t\t'goes_number': goes_number,\n",
+    "\t\t'AR_num': r['ar_noaanum'],\n",
+    "\t\t'hgs_x': r['hgs_x'],\n",
+    "\t\t'hgs_y': r['hgs_y'],\n",
+    "\t\t'hgs_bbox_poly': this_coord_array_hgs,\n",
+    "\t\t'hgc_x': r['hgc_x'],\n",
+    "\t\t'hgc_y': r['hgc_y'],\n",
+    "\t\t'hgc_bbox_poly': this_coord_array_hgc,\n",
+    "\t\t'hpc_x': r['hpc_x'],\n",
+    "\t\t'hpc_y': r['hpc_y'],\n",
+    "\t\t'hpc_bbox_poly': this_coord_array_hpc,\n",
+    "\t\t'event_type': r['event_type'],\n",
+    "\t\t'telescope_used': r['obs_observatory'],\n",
+    "\t\t'id_institute': r['frm_institute'],\n",
+    "\t\t'id_team': r['frm_identifier'],\n",
+    "\t\t'search_instrument': r['search_instrument'],\n",
+    "\t\t'search_channel': r['search_channelid'],\n",
+    "\t\t'noposition': flare_loc_bool \n",
+    "\t\t}\n",
+    "\tgoes_event_list.append(goes_event)\n",
+    "\n",
+    "df = pd.DataFrame(goes_event_list)\n",
+    "\n",
+    "# pickle.dump(df, open(outfile, 'wb'))\n",
+    "\n",
+    "# print('Ended {}'.format(tstart))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'time_range':    <sunpy.time.timerange.TimeRange object at 0x7efcab3e0850>\n",
-       "     Start: 2010-01-01 00:00:00\n",
-       "     End:   2010-12-31 00:00:00\n",
-       "     Center:2010-07-02 00:00:00\n",
-       "     Duration:364.0 days or\n",
-       "            8736.0 hours or\n",
-       "            524160.0 minutes or\n",
-       "            31449600.0 seconds,\n",
-       " 'class_filter_start': 'C1',\n",
-       " 'class_filter_end': 'C9.9'}"
+       "Timestamp('2010-05-01 01:36:40+0000', tz='UTC')"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def parse_HEK_FL_result(infile, outfile):\n",
-    "\n",
-    "\t    # want to condense the results of the query into a more manageable\n",
-    "\t    # dictionary\n",
-    "\t    # keep event data, start time, peak time, end time, GOES-class,\n",
-    "\t    # location, active region source (as per GOES list standard)\n",
-    "\t    # make this into a list of dictionaries\n",
-    "\n",
-    "\tgoes_results = pickle.load(open(infile,'rb'))\n",
-    "\n",
-    "\tgoes_event_list = []\n",
-    "\n",
-    "\tfor r in goes_results:\n",
-    "\t\ttry:\n",
-    "\t\t\thgc_poly_string = r['hgc_bbox']\n",
-    "\t\t\tsep_coord_from_string_hgc = re.split('[(-)]+', hgc_poly_string)\n",
-    "\t\t\tsep_coord_from_string_hgc = re.split('[(-)]+', hgc_poly_string)\n",
-    "\t\t\tonly_coord_string_list_hgc = sep_coord_from_string_hgc[1].split(',')\n",
-    "\t\t\tthis_coord_array_hgc = []\n",
-    "\t\t\tfor coord_pair_string_hgc in only_coord_string_list_hgc:\n",
-    "\t\t\t\tnumerical_coord_pairs_hgc = [np.float(coord_pair_string_hgc.split(' ')[0]), np.float(coord_pair_string_hgc.split(' ')[1])]\n",
-    "\t\t\t\tthis_coord_array_hgc.append(numerical_coord_pairs_hgc)\n",
-    "\t\texcept:\n",
-    "\t\t\tthis_coord_array_hgc = [0]\n",
-    "\n",
-    "\t\ttry:\n",
-    "\t\t\thpc_poly_string = r['hpc_bbox']\n",
-    "\t\t\tsep_coord_from_string_hpc = re.split('[(-)]+', hpc_poly_string)\n",
-    "\t\t\tsep_coord_from_string_hpc = re.split('[(-)]+', hpc_poly_string)\n",
-    "\t\t\tonly_coord_string_list_hpc = sep_coord_from_string_hpc[1].split(',')\n",
-    "\t\t\tthis_coord_array_hpc = []\n",
-    "\t\t\tfor coord_pair_string_hpc in only_coord_string_list_hpc:\n",
-    "\t\t\t\tnumerical_coord_pairs_hpc = [np.float(coord_pair_string_hpc.split(' ')[0]), np.float(coord_pair_string_hpc.split(' ')[1])]\n",
-    "\t\t\t\tthis_coord_array_hpc.append(numerical_coord_pairs_hpc)\n",
-    "\t\texcept:\n",
-    "\t\t\tthis_coord_array_hpc = [0]\n",
-    "\n",
-    "\n",
-    "\t\ttry:\n",
-    "\t\t\thgs_poly_string = r['hgs_bbox']\n",
-    "\t\t\tsep_coord_from_string_hgs = re.split('[(-)]+', hgs_poly_string)\n",
-    "\t\t\tsep_coord_from_string_hgs = re.split('[(-)]+', hgs_poly_string)\n",
-    "\t\t\tonly_coord_string_list_hgs = sep_coord_from_string_hgs[1].split(',')\n",
-    "\t\t\tthis_coord_array_hgs = []\n",
-    "\t\t\tfor coord_pair_string_hgs in only_coord_string_list_hgs:\n",
-    "\t\t\t\tnumerical_coord_pairs_hgs = [np.float(coord_pair_string_hgs.split(' ')[0]), np.float(coord_pair_string_hgs.split(' ')[1])]\n",
-    "\t\t\t\tthis_coord_array_hgs.append(numerical_coord_pairs_hgs)\n",
-    "\t\texcept:\n",
-    "\t\t\tthis_coord_array_hgs = [0]\n",
-    "\t\t\t\n",
-    "\t\tif r['noposition'] == 'true':\n",
-    "\t\t\tflare_loc_bool = 1\n",
-    "\t\telse:\n",
-    "\t\t\tflare_loc_bool = 0\n",
-    "\n",
-    "\t\tgoes_event = {\n",
-    "\t\t\t'event_date': parse_time(r['event_starttime']).strftime(\n",
-    "\t\t\t    '%Y-%m-%d'),\n",
-    "\t\t\t'start_time': parse_time(r['event_starttime']),\n",
-    "\t\t\t'peak_time': parse_time(r['event_peaktime']),\n",
-    "\t\t\t'end_time': parse_time(r['event_endtime']),\n",
-    "\t\t\t'goes_class': str(r['fl_goescls']),\n",
-    "\t\t\t'AR_num': r['ar_noaanum'],\n",
-    "\t\t\t'hgs_x': r['hgs_x'],\n",
-    "\t\t\t'hgs_y': r['hgs_y'],\n",
-    "\t\t\t'hgs_bbox_poly': this_coord_array_hgs,\n",
-    "\t\t\t'hgc_x': r['hgc_x'],\n",
-    "\t\t\t'hgc_y': r['hgc_y'],\n",
-    "\t\t\t'hgc_bbox_poly': this_coord_array_hgc,\n",
-    "\t\t\t'hpc_x': r['hpc_x'],\n",
-    "\t\t\t'hpc_y': r['hpc_y'],\n",
-    "\t\t\t'hpc_bbox_poly': this_coord_array_hpc,\n",
-    "\t\t\t'event_type': r['event_type'],\n",
-    "\t\t\t'telescope_used': r['obs_observatory'],\n",
-    "\t\t\t'id_institute': r['frm_institute'],\n",
-    "\t\t\t'id_team': r['frm_identifier'],\n",
-    "\t\t\t'search_instrument': r['search_instrument'],\n",
-    "\t\t\t'search_channel': r['search_channelid'],\n",
-    "\t\t\t'noposition': flare_loc_bool \n",
-    "\t\t\t}\n",
-    "\t\tgoes_event_list.append(goes_event)\n",
-    "\n",
-    "\tdf = pd.DataFrame(goes_event_list)\n",
-    "\n",
-    "\tpickle.dump(df, open(outfile, 'wb'))\n",
-    "\n",
-    "\t# print('Ended {}'.format(tstart))\n"
+    "df.peak_time.iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# df.goes_number.value_counts()\n"
    ]
   },
   {
@@ -284,7 +478,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "@merge(parse_HEK_FL_result, 'hek_flare_db.pickle',output_dir=f'{dataconfig.DATA_DIR_PRODUCTS}')\n",
+    "@merge(parse_HEK_FL_result, 'hek_flare_db.pickle', output_dir=f'{dataconfig.DATA_DIR_PRODUCTS}')\n",
     "def merge_hek_query_per_month(infiles, outfile):\n",
     "\tmerged_df_list = []\n",
     "\n",
