updated import libraries

--- a/jupyter_notebooks/create_hek_flare_database.ipynb
+++ b/jupyter_notebooks/create_hek_flare_database.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys  \n",
+    "import sys \n",
+    "import os \n",
     "sys.path.insert(1, '..')\n",
     "sys.path.insert(2, '../modules/')\n",
     "\n",
@@ -14,17 +15,12 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "import os\n",
-    "from sunpy.time import TimeRange\n",
-    "import sunpy.instr.goes\n",
-    "import time\n",
-    "from time import timezone\n",
+    "\n",
     "from sunpy.net import hek\n",
     "from sunpy.time import parse_time\n",
     "\n",
     "from ruffus import *\n",
     "import re\n",
-    "import datetime\n",
     "from datetime import timedelta\n",
     "\n",
     "import dataconfig\n",
@@ -33,11 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "WORKING_DIR = 'flare_hekQ.working'\n",
+    "WORKING_DIR = dataconfig.DATA_DIR_HEK_FLARES\n",
     "\n",
     "tw = lambda x: os.path.join(WORKING_DIR, x)\n",
     "\n",
@@ -49,7 +45,7 @@
     "# x starts with the end date of april such that for every starting point we need to add an extra day such that we begin in the same month as the end month. \n",
     "for previous, current in zip(x, x[1:]):\n",
     "    j = ([previous + timedelta(days = 1), current ])\n",
-    "    my_dict = {'name': '{}_{}_flare_hek'.format(previous.year, previous.month),\n",
+    "    my_dict = {'name': f'{previous.year}_{previous.month}_flare_hek',\n",
     "    \t\t\t'start': j[0], \n",
     "    \t\t\t'end':j[1]}\n",
     "    time_array.append(my_dict)"
@@ -57,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +64,7 @@
        " 'end': Timestamp('2010-05-31 00:00:00', freq='M')}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
