--- a/jupyter_notebooks/create_hek_flare_database.ipynb
+++ b/jupyter_notebooks/create_hek_flare_database.ipynb
@@ -375,7 +375,12 @@
     "\t\t'id_team': r['frm_identifier'],\n",
     "\t\t'search_instrument': r['search_instrument'],\n",
     "\t\t'search_channel': r['search_channelid'],\n",
-    "\t\t'noposition': flare_loc_bool \n",
+    "\t\t'noposition': flare_loc_bool,\n",
+    "\t\t'obs_lastprocessingdate': r['obs_lastprocessingdate'],\n",
+    "\t\t'frm_daterun': r['frm_daterun'],\n",
+    "\t\t'obs_firstprocessingdate': r['obs_firstprocessingdate'],\n",
+    "\t\t'kb_archivdate': r['kb_archivdate']\n",
+    "\n",
     "\t\t}\n",
     "\tgoes_event_list.append(goes_event)\n",
     "\n",
@@ -421,16 +426,16 @@
        "      <th>hgs_x</th>\n",
        "      <th>hgs_y</th>\n",
        "      <th>...</th>\n",
-       "      <th>hpc_x</th>\n",
-       "      <th>hpc_y</th>\n",
-       "      <th>hpc_bbox_poly</th>\n",
-       "      <th>event_type</th>\n",
        "      <th>telescope_used</th>\n",
        "      <th>id_institute</th>\n",
        "      <th>id_team</th>\n",
        "      <th>search_instrument</th>\n",
        "      <th>search_channel</th>\n",
        "      <th>noposition</th>\n",
+       "      <th>obs_lastprocessingdate</th>\n",
+       "      <th>frm_daterun</th>\n",
+       "      <th>obs_firstprocessingdate</th>\n",
+       "      <th>kb_archivdate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -447,16 +452,16 @@
        "      <td>-87.711603</td>\n",
        "      <td>25.437367</td>\n",
        "      <td>...</td>\n",
-       "      <td>-873.0000</td>\n",
-       "      <td>417.0000</td>\n",
-       "      <td>[[-945.0, 351.0], [-801.0, 351.0], [-801.0, 48...</td>\n",
-       "      <td>FL</td>\n",
        "      <td>SDO</td>\n",
        "      <td>LMSAL</td>\n",
        "      <td>Annotator</td>\n",
        "      <td>AIA</td>\n",
        "      <td>171</td>\n",
        "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>2010-05-01T17:59:59</td>\n",
+       "      <td></td>\n",
+       "      <td>2010-05-01T18:00:02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -471,16 +476,16 @@
        "      <td>-81.000000</td>\n",
        "      <td>24.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>-859.9380</td>\n",
-       "      <td>396.5484</td>\n",
-       "      <td>[[16.69878, 86.4576], [16.69878, 86.4576], [16...</td>\n",
-       "      <td>FL</td>\n",
        "      <td>SDO</td>\n",
        "      <td>LMSAL</td>\n",
        "      <td>SolarSoft</td>\n",
        "      <td>AIA</td>\n",
        "      <td>131,171,193,211,304</td>\n",
        "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>2010-05-01T00:00:00</td>\n",
+       "      <td></td>\n",
+       "      <td>2010-05-01T02:25:04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -495,16 +500,16 @@
        "      <td>-73.000000</td>\n",
        "      <td>23.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>-838.8540</td>\n",
-       "      <td>390.0636</td>\n",
-       "      <td>[[-844.122, 381.936], [-839.688, 383.0358], [-...</td>\n",
-       "      <td>FL</td>\n",
        "      <td>GOES</td>\n",
        "      <td>U.S. Dept. of Commerce, NOAA, Space Weather Pr...</td>\n",
        "      <td>SWPC</td>\n",
        "      <td>GOES</td>\n",
        "      <td>XRA</td>\n",
        "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>2010-05-01T00:00:00</td>\n",
+       "      <td></td>\n",
+       "      <td>2014-05-29T00:16:31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -519,16 +524,16 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>69.5046</td>\n",
-       "      <td>[[8.3e-05, -949.644], [-8.3e-05, -949.644], [0...</td>\n",
-       "      <td>FL</td>\n",
        "      <td>GOES</td>\n",
        "      <td>U.S. Dept. of Commerce, NOAA, Space Weather Pr...</td>\n",
        "      <td>SWPC</td>\n",
        "      <td>GOES</td>\n",
        "      <td>XRA</td>\n",
        "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td>2010-05-01T00:00:00</td>\n",
+       "      <td></td>\n",
+       "      <td>2014-01-09T22:38:54</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -543,16 +548,16 @@
        "      <td>-75.000000</td>\n",
        "      <td>22.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>-853.9020</td>\n",
-       "      <td>372.8568</td>\n",
-       "      <td>[[16.69812, 86.1888], [16.69812, 86.1888], [16...</td>\n",
-       "      <td>FL</td>\n",
        "      <td>SDO</td>\n",
        "      <td>LMSAL</td>\n",
        "      <td>SolarSoft</td>\n",
        "      <td>AIA</td>\n",
        "      <td>131,171,193,211,304</td>\n",
        "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>2010-05-01T00:00:00</td>\n",
+       "      <td></td>\n",
+       "      <td>2010-05-01T06:06:02</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -591,16 +596,16 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>26.2827</td>\n",
-       "      <td>[[8.3e-05, -946.722], [-8.3e-05, -946.722], [0...</td>\n",
-       "      <td>FL</td>\n",
        "      <td>GOES</td>\n",
        "      <td>U.S. Dept. of Commerce, NOAA, Space Weather Pr...</td>\n",
        "      <td>SWPC</td>\n",
        "      <td>GOES</td>\n",
        "      <td>XRA</td>\n",
        "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td>2010-05-24T00:00:00</td>\n",
+       "      <td></td>\n",
+       "      <td>2014-01-09T22:39:43</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>133</th>\n",
@@ -615,16 +620,16 @@
        "      <td>33.000000</td>\n",
        "      <td>-15.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>500.3148</td>\n",
-       "      <td>-226.5516</td>\n",
-       "      <td>[[16.60914, 40.70628], [16.60914, 40.70628], [...</td>\n",
-       "      <td>FL</td>\n",
        "      <td>SDO</td>\n",
        "      <td>LMSAL</td>\n",
        "      <td>SolarSoft</td>\n",
        "      <td>AIA</td>\n",
        "      <td>131,171,193,211,304</td>\n",
        "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>2010-05-25T00:00:00</td>\n",
+       "      <td></td>\n",
+       "      <td>2010-05-25T16:16:23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>134</th>\n",
@@ -639,16 +644,16 @@
        "      <td>32.000000</td>\n",
        "      <td>-16.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>484.1100</td>\n",
-       "      <td>-242.2518</td>\n",
-       "      <td>[[476.124, -250.158], [489.591, -250.3614], [4...</td>\n",
-       "      <td>FL</td>\n",
        "      <td>GOES</td>\n",
        "      <td>U.S. Dept. of Commerce, NOAA, Space Weather Pr...</td>\n",
        "      <td>SWPC</td>\n",
        "      <td>GOES</td>\n",
        "      <td>XRA</td>\n",
        "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>2010-05-25T00:00:00</td>\n",
+       "      <td></td>\n",
+       "      <td>2014-05-29T00:16:43</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>135</th>\n",
@@ -663,16 +668,16 @@
        "      <td>-60.000000</td>\n",
        "      <td>13.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>-800.9460</td>\n",
-       "      <td>222.9756</td>\n",
-       "      <td>[[16.60254, 36.14178], [16.60254, 36.14178], [...</td>\n",
-       "      <td>FL</td>\n",
        "      <td>SDO</td>\n",
        "      <td>LMSAL</td>\n",
        "      <td>SolarSoft</td>\n",
        "      <td>AIA</td>\n",
        "      <td>131,171,193,211,304</td>\n",
        "      <td>0</td>\n",
+       "      <td></td>\n",
+       "      <td>2010-05-29T00:00:00</td>\n",
+       "      <td></td>\n",
+       "      <td>2010-05-29T03:39:59</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>136</th>\n",
@@ -687,20 +692,20 @@
        "      <td>0.000000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.0000</td>\n",
-       "      <td>19.5324</td>\n",
-       "      <td>[[8.3e-05, -946.296], [-8.3e-05, -946.296], [0...</td>\n",
-       "      <td>FL</td>\n",
        "      <td>GOES</td>\n",
        "      <td>U.S. Dept. of Commerce, NOAA, Space Weather Pr...</td>\n",
        "      <td>SWPC</td>\n",
        "      <td>GOES</td>\n",
        "      <td>XRA</td>\n",
        "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td>2010-05-27T00:00:00</td>\n",
+       "      <td></td>\n",
+       "      <td>2014-01-09T22:39:45</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>137 rows × 24 columns</p>\n",
+       "<p>137 rows × 28 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -730,59 +735,59 @@
        "135 2010-05-27 23:25:00+00:00       B1.4           B          1.4      0.0   \n",
        "136 2010-05-27 23:25:00+00:00       B1.4           B          1.4  11072.0   \n",
        "\n",
-       "         hgs_x      hgs_y  ...     hpc_x     hpc_y  \\\n",
-       "0   -87.711603  25.437367  ... -873.0000  417.0000   \n",
-       "1   -81.000000  24.000000  ... -859.9380  396.5484   \n",
-       "2   -73.000000  23.000000  ... -838.8540  390.0636   \n",
-       "3     0.000000   0.000000  ...    0.0000   69.5046   \n",
-       "4   -75.000000  22.000000  ... -853.9020  372.8568   \n",
-       "..         ...        ...  ...       ...       ...   \n",
-       "132   0.000000   0.000000  ...    0.0000   26.2827   \n",
-       "133  33.000000 -15.000000  ...  500.3148 -226.5516   \n",
-       "134  32.000000 -16.000000  ...  484.1100 -242.2518   \n",
-       "135 -60.000000  13.000000  ... -800.9460  222.9756   \n",
-       "136   0.000000   0.000000  ...    0.0000   19.5324   \n",
+       "         hgs_x      hgs_y  ... telescope_used  \\\n",
+       "0   -87.711603  25.437367  ...            SDO   \n",
+       "1   -81.000000  24.000000  ...            SDO   \n",
+       "2   -73.000000  23.000000  ...           GOES   \n",
+       "3     0.000000   0.000000  ...           GOES   \n",
+       "4   -75.000000  22.000000  ...            SDO   \n",
+       "..         ...        ...  ...            ...   \n",
+       "132   0.000000   0.000000  ...           GOES   \n",
+       "133  33.000000 -15.000000  ...            SDO   \n",
+       "134  32.000000 -16.000000  ...           GOES   \n",
+       "135 -60.000000  13.000000  ...            SDO   \n",
+       "136   0.000000   0.000000  ...           GOES   \n",
        "\n",
-       "                                         hpc_bbox_poly event_type  \\\n",
-       "0    [[-945.0, 351.0], [-801.0, 351.0], [-801.0, 48...         FL   \n",
-       "1    [[16.69878, 86.4576], [16.69878, 86.4576], [16...         FL   \n",
-       "2    [[-844.122, 381.936], [-839.688, 383.0358], [-...         FL   \n",
-       "3    [[8.3e-05, -949.644], [-8.3e-05, -949.644], [0...         FL   \n",
-       "4    [[16.69812, 86.1888], [16.69812, 86.1888], [16...         FL   \n",
+       "                                          id_institute    id_team  \\\n",
+       "0                                                LMSAL  Annotator   \n",
+       "1                                                LMSAL  SolarSoft   \n",
+       "2    U.S. Dept. of Commerce, NOAA, Space Weather Pr...       SWPC   \n",
+       "3    U.S. Dept. of Commerce, NOAA, Space Weather Pr...       SWPC   \n",
+       "4                                                LMSAL  SolarSoft   \n",
        "..                                                 ...        ...   \n",
-       "132  [[8.3e-05, -946.722], [-8.3e-05, -946.722], [0...         FL   \n",
-       "133  [[16.60914, 40.70628], [16.60914, 40.70628], [...         FL   \n",
-       "134  [[476.124, -250.158], [489.591, -250.3614], [4...         FL   \n",
-       "135  [[16.60254, 36.14178], [16.60254, 36.14178], [...         FL   \n",
-       "136  [[8.3e-05, -946.296], [-8.3e-05, -946.296], [0...         FL   \n",
+       "132  U.S. Dept. of Commerce, NOAA, Space Weather Pr...       SWPC   \n",
+       "133                                              LMSAL  SolarSoft   \n",
+       "134  U.S. Dept. of Commerce, NOAA, Space Weather Pr...       SWPC   \n",
+       "135                                              LMSAL  SolarSoft   \n",
+       "136  U.S. Dept. of Commerce, NOAA, Space Weather Pr...       SWPC   \n",
        "\n",
-       "     telescope_used                                       id_institute  \\\n",
-       "0               SDO                                              LMSAL   \n",
-       "1               SDO                                              LMSAL   \n",
-       "2              GOES  U.S. Dept. of Commerce, NOAA, Space Weather Pr...   \n",
-       "3              GOES  U.S. Dept. of Commerce, NOAA, Space Weather Pr...   \n",
-       "4               SDO                                              LMSAL   \n",
-       "..              ...                                                ...   \n",
-       "132            GOES  U.S. Dept. of Commerce, NOAA, Space Weather Pr...   \n",
-       "133             SDO                                              LMSAL   \n",
-       "134            GOES  U.S. Dept. of Commerce, NOAA, Space Weather Pr...   \n",
-       "135             SDO                                              LMSAL   \n",
-       "136            GOES  U.S. Dept. of Commerce, NOAA, Space Weather Pr...   \n",
+       "    search_instrument       search_channel  noposition obs_lastprocessingdate  \\\n",
+       "0                 AIA                  171           0                          \n",
+       "1                 AIA  131,171,193,211,304           0                          \n",
+       "2                GOES                  XRA           0                          \n",
+       "3                GOES                  XRA           1                          \n",
+       "4                 AIA  131,171,193,211,304           0                          \n",
+       "..                ...                  ...         ...                    ...   \n",
+       "132              GOES                  XRA           1                          \n",
+       "133               AIA  131,171,193,211,304           0                          \n",
+       "134              GOES                  XRA           0                          \n",
+       "135               AIA  131,171,193,211,304           0                          \n",
+       "136              GOES                  XRA           1                          \n",
        "\n",
-       "       id_team search_instrument       search_channel noposition  \n",
-       "0    Annotator               AIA                  171          0  \n",
-       "1    SolarSoft               AIA  131,171,193,211,304          0  \n",
-       "2         SWPC              GOES                  XRA          0  \n",
-       "3         SWPC              GOES                  XRA          1  \n",
-       "4    SolarSoft               AIA  131,171,193,211,304          0  \n",
-       "..         ...               ...                  ...        ...  \n",
-       "132       SWPC              GOES                  XRA          1  \n",
-       "133  SolarSoft               AIA  131,171,193,211,304          0  \n",
-       "134       SWPC              GOES                  XRA          0  \n",
-       "135  SolarSoft               AIA  131,171,193,211,304          0  \n",
-       "136       SWPC              GOES                  XRA          1  \n",
+       "             frm_daterun obs_firstprocessingdate        kb_archivdate  \n",
+       "0    2010-05-01T17:59:59                          2010-05-01T18:00:02  \n",
+       "1    2010-05-01T00:00:00                          2010-05-01T02:25:04  \n",
+       "2    2010-05-01T00:00:00                          2014-05-29T00:16:31  \n",
+       "3    2010-05-01T00:00:00                          2014-01-09T22:38:54  \n",
+       "4    2010-05-01T00:00:00                          2010-05-01T06:06:02  \n",
+       "..                   ...                     ...                  ...  \n",
+       "132  2010-05-24T00:00:00                          2014-01-09T22:39:43  \n",
+       "133  2010-05-25T00:00:00                          2010-05-25T16:16:23  \n",
+       "134  2010-05-25T00:00:00                          2014-05-29T00:16:43  \n",
+       "135  2010-05-29T00:00:00                          2010-05-29T03:39:59  \n",
+       "136  2010-05-27T00:00:00                          2014-01-09T22:39:45  \n",
        "\n",
-       "[137 rows x 24 columns]"
+       "[137 rows x 28 columns]"
       ]
      },
      "execution_count": 8,
