test for caching drms files that are empty

--- a/jupyter_notebooks/create_DRMS_HARP_db.ipynb
+++ b/jupyter_notebooks/create_DRMS_HARP_db.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loaded libraries sxi module: 0:00:01.124554\n",
-      "loaded libraries sxi module: 0:00:00.000021\n"
+      "loaded libraries sxi module: 0:00:00.432133\n",
+      "loaded libraries sxi module: 0:00:00.000025\n"
      ]
     }
    ],
@@ -4610,6 +4610,53 @@
    ],
    "source": [
     "# joined_time_stamp[ ['CRPIX1','CRPIX2']].iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/mnt/e/ALEXIS_data/hmi_drms_ar/no_data_dir/\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os \n",
+    "import dataconfig\n",
+    "\n",
+    "WORKING_DIR = dataconfig.DATA_DIR_HMI_DRMS\n",
+    "\n",
+    "cache_dir = f'{WORKING_DIR}/no_data_dir/'\n",
+    "\n",
+    "print(cache_dir)\n",
+    "\n",
+    "os.makedirs(cache_dir, exist_ok=True) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re \n",
+    "\n",
+    "# r'\\d{4}.\\d{2}.\\d{2}-\\d{4}.\\d{2}.\\d{2}_drms_dmi_AR.df.pickle'\n",
+    "\n",
+    "file_to_check = '/mnt/e/ALEXIS_data/hmi_drms_ar/2016.09.07-2016.09.08_drms_dmi_AR.df.pickle'\n",
+    "\n",
+    "file_reg_exp = re.findall(r'\\d{4}.\\d{2}.\\d{2}-\\d{4}.\\d{2}.\\d{2}_drms_dmi_AR.df.pickle',file_to_check )[0]\n",
+    "\n",
+    "cache_missing_file_name = os.path.join(cache_dir, file_reg_exp)\n",
+    "\n",
+    "\n",
+    "\n",
+    "with open(cache_missing_file_name, 'a'): os.utime(cache_missing_file_name, None)"
    ]
   },
   {
