create SS_and_SWPC_hek_flares.pickle in data_products

--- a/jupyter_notebooks/zerocross_analysis.ipynb
+++ b/jupyter_notebooks/zerocross_analysis.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +592,7 @@
        "[124548 rows x 24 columns]"
       ]
      },
-     "execution_count": 182,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +618,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
        " 8923)"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,9 +668,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "C    7603\n",
+       "M     724\n",
+       "X      49\n",
+       "Name: goes_letter, dtype: int64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "swpc_flares = hek_flares[(hek_flares.id_team =='SWPC')& (hek_flares.goes_letter >= 'C') ][['event_date', 'start_time', 'peak_time', 'end_time', 'goes_class',\n",
     "       'goes_letter', 'goes_number', 'AR_num', 'hgs_x', 'hgs_y', 'hgc_x', 'hgc_y', 'hpc_x', 'hpc_y', 'event_type', 'telescope_used', 'id_institute',\n",
@@ -680,9 +694,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([     1,     40,     46, ..., 124527, 124531, 124535])"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ss_index = ss_flares.drop_duplicates().index.to_list()\n",
     "swpc_index = swpc_flares.drop_duplicates().index.to_list()\n",
@@ -694,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +730,7 @@
        "Name: id_team, dtype: int64"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1115,7 +1140,7 @@
        "[17129 rows x 24 columns]"
       ]
      },
-     "execution_count": 185,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,27 +1152,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SolarSoft    8670\n",
+       "SWPC         8299\n",
+       "Name: id_team, dtype: int64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_time = pd.Timestamp('2010-05-01 00:00:00.00', tz = 'utc')\n",
+    "end_time = pd.Timestamp('2020-03-01 00:00:00.00', tz = 'utc')\n",
+    "\n",
+    "start_time\n",
+    "masked_by_time = no_duplicates[(no_duplicates.peak_time >=start_time )& (no_duplicates.peak_time <=end_time )]\n",
+    "\n",
+    "masked_by_time.id_team.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "goes_flares = no_duplicates[(no_duplicates['id_team'] == 'SWPC') & (no_duplicates['goes_class'] > 'C')].reset_index(drop= True)\n",
+    "# pickle.dump(masked_by_time, open(f'{dataconfig.DATA_DIR_PRODUCTS}/SS_and_SWPC_hek_flares.pickle', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goes_flares = masked_by_time[(masked_by_time['id_team'] == 'SWPC') & (masked_by_time['goes_class'] > 'C')].reset_index(drop= True)\n",
     "\n",
-    "solarsoft_flares = no_duplicates[(no_duplicates['id_team'] == 'SolarSoft') & (no_duplicates['goes_class'] > 'C')].reset_index(drop= True)\n",
+    "solarsoft_flares = masked_by_time[(masked_by_time['id_team'] == 'SolarSoft') & (masked_by_time['goes_class'] > 'C')].reset_index(drop= True)\n",
     "\n",
     "zero_cross = merged_zerocross_df[(merged_zerocross_df['resampled_value'] > flare_class_dict_query['C'])].reset_index(drop= True)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(C    7869\n",
+       " M     749\n",
+       " X      52\n",
+       " Name: goes_letter, dtype: int64,\n",
+       " SolarSoft    8670\n",
+       " Name: id_team, dtype: int64)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solarsoft_flares.goes_letter.value_counts(), solarsoft_flares.id_team.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(C    7528\n",
+       " M     722\n",
+       " X      49\n",
+       " Name: goes_letter, dtype: int64,\n",
+       " SWPC    8299\n",
+       " Name: id_team, dtype: int64)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "goes_flares.goes_letter.value_counts(), goes_flares.id_team.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-187-25a7fd3838db>:5: SettingWithCopyWarning: \n",
+      "<ipython-input-28-25a7fd3838db>:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1188,7 +1300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1406,7 @@
        "[82391 rows x 2 columns]"
       ]
      },
-     "execution_count": 188,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1359,7 +1471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1465,7 +1577,7 @@
        "[38666 rows x 2 columns]"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1477,7 +1589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1556,7 +1668,7 @@
        "6  (1, 1, 1)    7332"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1576,7 +1688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
